--- a/src/App.css
+++ b/src/App.css
@@ -26,3 +26,22 @@
   justify-content: flex-center;
   background-color: rgba(0, 0, 0, 0.3);
 }
+
+.main-content-image {
+  width: 100rem;
+}
+
+.overlay {
+  padding: 13vw 6vw;
+  background-color: transparent;
+  z-index: 1;
+  width: 100%;
+}
+
+.notfoundtext {
+
+}
+
+.Noyeezy {
+  
+}
